--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "projekt-node",
   "version": "0.0.1",
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "dependencies": {
+    "nodemon": "^1.17.3",
     "querystring": "^0.2.0"
   }
 }
